--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,5 +1,5 @@
 .card {
-    background-color: #fff;
+    background-color: var(--card-background, #fff);
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -7,7 +7,6 @@
     height: 75%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
   }
   
